# my-neural-network

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
models/: neuron.py
scripts/: all_checks.py  coverage_test.py  lint_code.py  run_tests.py
src/activation_functions/: __init__.py  activation_function.py
src/cnn/: __init__.py  conv2d.py  conv2d_pre_einsum.py  simple_cnn.py
src/my_neural_network/: __init__.py  constants.py  error_handlers.py  neuron.py
src/my_neural_network/dev_tools/: format_code.py
src/pytorch_core/torch_trainer/: trainer.py
src/pytorch_extension/dynatorch_model/: torch_model.py
tests/: conftest.py  test_activation_functions.py  test_dynatorch.py  test_neuron.py
tests/titanic_data/: features.py  preprocess.py
