[tool.poetry]
name = "my-neural-network"
version = "0.1.0"
description = "A hand-rolled neural network project"
authors = ["DeepBlockDeepak <jordan.medina1729@gmail.com>"]
license = "MIT"
readme = "README.md"


# Define your Python version and any project dependencies here
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
kaggle = "^1.5.16"
pyarrow = "^15.0.0"
torch = "^2"

# Development dependencies for formatting and linting
[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
ruff = "^0.1.13"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
# Formats the code using isort and black
format = "my_neural_network.dev_tools.format_code:run"
# Lints the code using ruff
lint = "my_neural_network.dev_tools.lint_code:run"
# Runs unit tests located in the tests/ directory
test = "my_neural_network.dev_tools.run_tests:run"
# command to run format, lint, and test sequentially
all-checks = "my_neural_network.dev_tools.all_checks:run_all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"